# generalized_rbda

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.orig  LICENSE  README.md  config.h.in
Benchmarking/: CMakeLists.txt  accuracyBenchmarkApplyTestForce.cpp  accuracyBenchmarkForwardDynamics.cpp  accuracyBenchmarkInverseDynamics.cpp  accuracyBenchmarkInverseDynamicsRobots.cpp  accuracyBenchmarkRobots.cpp  accuracy_benchmark.m  accuracy_benchmark_robots.m  clusterModelTimingAnalysis.cpp  clusterModelTimingAnalysisTello.cpp  cluster_model_timing_analysis.m  lagrangeMultiplierMethodTimingAnalysis.cpp  lagrange_mult_timing_analysis.m  run_accuracy_benchmark.sh  run_all_benchmarks.sh  run_cluster_model_time_analysis.sh  run_lg_mult_time_analysis.sh  run_tello_analysis.sh  run_time_benchmark.sh  tello_analysis.m  timeBenchmarkForwardDynamics.cpp  timeBenchmarkForwardDynamicsRobots.cpp  timeBenchmarkForwardDynamicsTello.cpp  timeBenchmarkInverseDynamicsRobots.cpp  timeBenchmarkInverseOSIM.cpp  timeBenchmarkRobots.cpp  time_bechmark_iosim.m  time_benchmark.m  time_benchmark_robots.m
Benchmarking/Legacy/: CMakeLists.txt  run_accuracy_benchmark.sh  run_time_benchmark.sh
Benchmarking/Legacy/data/: TimingATF_Robots.csv  TimingFD_RevoluteChain.csv  TimingFD_RevolutePairChain.csv  TimingFD_Robots.csv  TimingID_Robots.csv  TimingIOSIM_RevoluteChain.csv  TimingIOSIM_RevolutePairChain.csv  TimingIOSIM_Robots.csv
Benchmarking/Legacy/figures/: AccuracyEET_HumanoidLeg_torque.eps  TimingFD_Robots.eps  TimingID_Robots.eps  (+2 more)
Benchmarking/data/: AccuracyATF_RevoluteChain.csv  AccuracyATF_RevolutePairChain.csv  AccuracyATF_Robots.csv  AccuracyFD_RevoluteChain.csv  AccuracyFD_RevolutePairChain.csv  AccuracyFD_Robots.csv  AccuracyID_RevoluteChain.csv  AccuracyID_RevolutePairChain.csv  AccuracyID_Robots.csv  AccuracyIOSIM_Robots.csv  Accuracy_RevoluteChain.csv  CL_RevoluteChain.csv  CL_RevolutePairChain.csv  CL_Tello.csv  LgMlt_RevoluteChain.csv  LgMlt_RevolutePairChain.csv  TimingATF_Robots.csv  TimingFD_Robots.csv  TimingID_Robots.csv  TimingIOSIM_Robots.csv  Timing_RevoluteChain.csv  Timing_RevoluteMultiRotorChain.csv  Timing_RevolutePairChain.csv  Timing_RevoluteWithAndWithoutRotorChain.csv  Timing_Robots.csv  Timing_Tello.csv
Benchmarking/plotting/: accuracy_benchmark_ee_tracking.m  accuracy_benchmark_robots.m  accuracy_benchmark_sysID.m  accuracy_benchmark_traj_tracking.m  approximate_systems.m  branchAndDepth.m  parallel_chains.m  pinocchio_benchmark_fd.m  plottingOptions.m  rotors.m  time_benchmark_fd.m  time_benchmark_iosim.m  time_benchmark_robots.m
Benchmarking/src/: BenchmarkingHelpers.hpp  accuracyBenchmarkApplyTestForce.cpp  accuracyBenchmarkEndEffectorTracking.cpp  accuracyBenchmarkForwardDynamics.cpp  accuracyBenchmarkInverseDynamics.cpp  accuracyBenchmarkRobots.cpp  accuracyBenchmarkSysID.cpp  accuracyBenchmarkTrajectoryTracking.cpp  approximateBenchmark.cpp  branchAndDepthBenchmark.cpp  branchAndDepthHelpers.cpp  branchAndDepthHelpers.hpp  forwardDynamicsBenchmark.cpp  forwardDynamicsBenchmarkExplicit.cpp  forwardDynamicsBenchmarkImplicit.cpp  parallelChainBenchmark.cpp  parallelChainsBenchmark.cpp  parallelChainsBenchmark_v2.cpp  pinocchioBenchmark.cpp  pinocchioHelpers.cpp  pinocchioHelpers.hpp  rotorsBenchmark.cpp  testConstraintDynamics.cpp  testNewParsing.cpp  timeBenchmarkForwardDynamics.cpp  timeBenchmarkInverseOSIM.cpp  timeBenchmarkRobots.cpp
Benchmarking/urdfs/: approx_four_bar_branch.xacro  approx_four_bar_properties.xacro  approx_revolute_rotor_branch.xacro  approx_revolute_rotor_pair_branch.xacro  approx_revolute_rotor_pair_properties.xacro  approx_revolute_rotor_properties.xacro  four_bar_branch.xacro  four_bar_properties.xacro  make_parallel_chain_urdfs.sh  make_revolute_urdfs.sh  make_variable_tree_urdfs.sh  revolute_rotor_branch.xacro  revolute_rotor_chain.urdf  revolute_rotor_pair_branch.xacro  revolute_rotor_pair_properties.xacro  revolute_rotor_properties.xacro
DynamicsEngine/: Body.h  CMakeLists.txt  ClusterTreeDynamics.cpp  ClusterTreeModel.cpp  ClusterTreeModel.h  DynamicsEngine.cpp  DynamicsEngine.h  DynamicsUtilities.h  Factorization.cpp  Factorization.h  RS_Simulation.cpp  RS_Simulation.hpp  ReflectedInertiaTreeModel.cpp  ReflectedInertiaTreeModel.h  RigidBodyTreeDynamics.cpp  RigidBodyTreeModel.cpp  RigidBodyTreeModel.h  TestEngine.cpp  TestEngine.hpp  TreeModel.cpp  TreeModel.h
DynamicsEngine/Collision/: CollisionBox.cpp  CollisionBox.h  CollisionMesh.cpp  CollisionMesh.h  CollisionPlane.cpp  CollisionPlane.h  ContactConstraint.cpp  ContactConstraint.h  ContactImpulse.cpp  ContactImpulse.h  ContactSpringDamper.cpp  ContactSpringDamper.h
DynamicsEngine/GeneralizedJoints/: FreeJoint.cpp  FreeJoint.h  GeneralizedJoint.cpp  GeneralizedJoint.h  GeneralizedJointTypes.h  GenericJoint.cpp  GenericJoint.h  RevoluteJoint.cpp  RevoluteJoint.h  RevolutePairJoint.cpp  RevolutePairJoint.h  RevolutePairWithRotorJoint.cpp  RevolutePairWithRotorJoint.h  RevoluteWithMultipleRotorsJoint.cpp  RevoluteWithMultipleRotorsJoint.h  RevoluteWithRotorJoint.cpp  RevoluteWithRotorJoint.h
DynamicsEngine/Joints/: Joint.h
DynamicsEngine/Nodes/: ClusterTreeNode.cpp  ClusterTreeNode.h  ReflectedInertiaTreeNode.cpp  ReflectedInertiaTreeNode.h  RigidBodyTreeNode.cpp  RigidBodyTreeNode.h  TreeNode.h
DynamicsEngine/SimUtilities/: GamepadCommand.h  ImuSimulator.cpp  ImuSimulator.h  VisualizationData.h  realSenseSimulator.cpp  realSenseSimulator.h
DynamicsEngine/Unity_Visualization/: .gitignore  README.md
UnitTests/: CMakeLists.txt  testAutoDiff.cpp  testClusterJointDerivatives.cpp  testClusterJoints.cpp  testClusterTreeModel.cpp  testDynamicsAlgosDerivatives.cpp  testForwardKinematics.cpp  testHelpers.hpp  testLoopConstraintDerivatives.cpp  testLoopConstraints.cpp  testOrientationTools.cpp  testReflectedInertiaAlgos.cpp  testRigidBodyDynamicsAlgos.cpp  testRigidBodyDynamicsAlgosDerivatives.cpp  testSpatialTransforms.cpp  testTelloForwardKinematics.cpp  testTelloRigidBodyDynamicsAlgos.cpp  testUrdfParser.cpp  test_Dynamics.cpp
UnitTests/googletest-src/: CMakeLists.txt
(+2030 files in other folders)
